--- a/src/styles/text.scss
+++ b/src/styles/text.scss
@@ -1,7 +1,11 @@
 .hero-title {
-    font-size: 4.4vw;
+    font-size: 4.5vw;
 
     @media screen and (max-width : 768px) {
         font-size: 2.2rem;
+    }
+
+    @media screen and (min-width : 768px) and (max-width : 1024px) {
+        font-size: 2.5rem;
     }
 }
