--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -19,6 +19,13 @@
     }
 }
 
+.landing__FAQ {
+
+    .FAQ-card {
+        box-shadow: 0px 6px 16px 0px rgba(74, 58, 255, 0.19);
+    }
+}
+
 .open-menu {
     height: auto;
     transition: 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
