--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -26,6 +26,12 @@
     }
 }
 
+.landing__contact {
+    .contact-form {
+        box-shadow: 0px 80.6px 105.701px 0px rgba(51, 51, 51, 0.10);
+    }
+}
+
 .open-menu {
     height: auto;
     transition: 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
