--- a/src/styles/text.scss
+++ b/src/styles/text.scss
@@ -1,8 +1,12 @@
 .hero-title {
-    font-size: 4.2vw;
+    font-size: 4rem;
 
-    @media screen and (max-width : 768px) {
+    @media screen and (max-width : 767px) {
         font-size: 2.2rem;
+    }
+
+    @media screen and (min-width : 1024px) and (max-width : 1279px) {
+        font-size: 2.5rem;
     }
 
     @media screen and (min-width : 768px) and (max-width : 1024px) {
