--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -1,26 +1,17 @@
 .landing__hero {
-    .hero-header {
+    .hero-header .hero-title {
+        font-size: 4vw;
 
-        &__container {
-            @media screen and (min-width : 1024px) and (max-width : 1279px) {
-                width: 20rem !important;
-            }
+        @media screen and (max-width : 767px) {
+            font-size: 2.2rem;
+        }
 
-            .hero-title {
-                font-size: 4vw;
+        @media screen and (min-width : 1024px) and (max-width : 1279px) {
+            font-size: 2.5rem;
+        }
 
-                @media screen and (max-width : 767px) {
-                    font-size: 2.2rem;
-                }
-
-                @media screen and (min-width : 1024px) and (max-width : 1279px) {
-                    font-size: 2.5rem;
-                }
-
-                @media screen and (min-width : 768px) and (max-width : 1024px) {
-                    font-size: 2.5rem;
-                }
-            }
+        @media screen and (min-width : 768px) and (max-width : 1024px) {
+            font-size: 2.5rem;
         }
     }
 }
