--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -7,8 +7,14 @@
         }
 
         @media screen and (min-width : 768px) and (max-width : 1279px) {
-            font-size: 2.5rem;
+            font-size: 2.6rem;
         }
+
+
+        @media screen and (min-width : 1536px) {
+            font-size: 4.6rem;
+        }
+
     }
 }
 
