add next-api with nodemailer

--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -31,13 +31,15 @@
 }
 
 .open-menu {
-    height: auto;
-    transition: 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
+    display: block;
+    overflow: hidden;
+    width: 100%;
+    transition: 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .close-menu {
-    height: 0;
-    transition: 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+    display: none;
+    transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
     overflow: hidden;
     padding: 0;
 }
