fix ortograph error

--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -26,6 +26,10 @@
             object-fit: cover;
         }
     }
+
+    .email-input{
+        border-radius: 30px;
+    }
 }
 
 .landing__partners {
