--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -19,15 +19,37 @@
 }
 
 .landing__features {
+    .header .text-container {
+        @media screen and (min-width : 1024px) and (max-width : 1279px) {
+            h3 {
+                font-size: 1.4rem !important;
+            }
+        }
+    }
+
+    .features-header {
+        @media screen and (min-width : 1024px) and (max-width : 1279px) {
+            h4 {
+                font-size: 2.25rem !important;
+            }
+        }
+    }
+
     .features-card {
         height: 28rem;
+
+        @media screen and (min-width : 1024px) and (max-width : 1279px) {
+            .header h3 {
+                font-size: 1.5rem !important;
+            }
+        }
 
         img {
             object-fit: cover;
         }
     }
 
-    .email-input{
+    .email-input {
         border-radius: 30px;
     }
 }
@@ -47,10 +69,22 @@
 
     .FAQ-card {
         box-shadow: 0px 6px 16px 0px rgba(74, 58, 255, 0.13);
+
+        .header h3 {
+            @media screen and (min-width : 1024px) and (max-width : 1279px) {
+                font-size: 1.3rem !important;
+            }
+        }
     }
 }
 
 .landing__contact {
+    .contact-header h2 {
+        @media screen and (min-width : 1024px) and (max-width : 1279px) {
+            font-size: 1.9rem !important;
+        }
+    }
+
     .contact-form {
         box-shadow: 0px 80.6px 105.701px 0px rgba(51, 51, 51, 0.10);
     }
