--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -1,20 +1,28 @@
 .landing__hero {
-    .hero-header .hero-title {
-        font-size: 4rem;
+    .hero-header {
+        .hero-title {
+            font-size: 4rem;
 
-        @media screen and (max-width : 767px) {
-            font-size: 2.3rem;
+            @media screen and (max-width : 767px) {
+                font-size: 2.3rem;
+            }
+
+            @media screen and (min-width : 768px) and (max-width : 1279px) {
+                font-size: 2.6rem;
+            }
+
+
+            @media screen and (min-width : 1536px) {
+                font-size: 4.6rem;
+            }
+
         }
 
-        @media screen and (min-width : 768px) and (max-width : 1279px) {
-            font-size: 2.6rem;
+        p {
+            @media screen and (max-width : 767px) {
+                max-width: 400px !important;
+            }
         }
-
-
-        @media screen and (min-width : 1536px) {
-            font-size: 4.6rem;
-        }
-
     }
 }
 
